tests/baselines/reference/amdDependencyCommentName3.errors.txt
tests/cases/compiler/amdDependencyCommentName3.ts(5,21): error TS2307: Cannot find module 'm2' or its corresponding type declarations.


==== tests/cases/compiler/amdDependencyCommentName3.ts (1 errors) ====
    ///<amd-dependency path='bar' name='b'/>
    ///<amd-dependency path='foo'/>
    ///<amd-dependency path='goo' name='c'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2307: Cannot find module 'm2' or its corresponding type declarations.
    m1.f();